syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

package auth_v1;

option go_package = "github.com/dbulyk/auth/pkg/auth_v1;auth_v1";

service AuthV1 {
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
  rpc GetUser(GetUserRequest) returns (GetUserResponse);
  rpc UpdateUser(UpdateUserRequest) returns (google.protobuf.Empty);
  rpc DeleteUser(DeleteUserRequest) returns (google.protobuf.Empty);
}

message CreateUserRequest {
  string name = 1;
  string email = 2;
  string password = 3;
  string password_confirm = 4;
  Role role = 5;
}

message CreateUserResponse {
  int64 id = 1;
}

message GetUserRequest {
  int64 id = 1;
}

message GetUserResponse {
  int64 id = 1;
  string name = 2;
  string email = 3;
  string tag = 4;
  Role role = 5;
  google.protobuf.Timestamp created_at = 6;
  google.protobuf.Timestamp updated_at = 7;
}

message UpdateUserRequest {
  int64 id = 1;
  string name = 2;
  string email = 3;
  string tag = 4;
  Role role = 5;
}

message DeleteUserRequest {
  int64 id = 1;
}

enum Role {
    ENUM_NAME_UNSPECIFIED = 0;
    ROLE_USER = 1;
    ROLE_ADMIN = 2;
}